--- a/views/index.erb
+++ b/views/index.erb
@@ -7,6 +7,21 @@
     <link rel="stylesheet" type="text/css" href="/style.css?<%=Time.now.to_i%>">
 </head>
 <body>
-  <img src="/img/glhf.png">
-</body>
+  <div id="Wrapper">
+    
+    <div id="tasks_wrapper">
+      <h1>Tasks</h1>
+
+    </div>
+
+    <div id="addTask_wrapper">
+      <h1>Add Task</h1>
+    </div>
+
+    <div id="comTasks_wrapper">
+      <h2>Completed</h2>
+    </div>
+
+  </div>
+  </body>
 </html>
