--- a/views/index.erb
+++ b/views/index.erb
@@ -8,19 +8,55 @@
 </head>
 <body>
   <div id="Wrapper">
-    
-    <div id="tasks_wrapper">
-      <h1>Tasks</h1>
+    <h1>Ongoing Tasks</h1>
+    <ul>
+      <% @ongoing_tasks.each do |task|%>
+        <li>
+          <h3><%= task['title'] %></h3>
+          <h4><%= task['description'] %></h4>
+          <h6><%= task['category'] %></h6>
+        </li> 
+        <form action="/tasks/<%=task["id"]%>/delete" method="post">
+          <input type="submit" value="Unassign Task" style="color: red;">
+        </form>
+        <form action="/tasks/<%=task["id"]%>/edit" method="get">
+          <input type="submit" value="Edit Task" style="color: rgb(235, 200, 2);">
+        </form>
+        <form action="/tasks/<%=task["id"]%>/complete" method="post">
+          <input type="submit" value="Complete Task" style="color: rgb(0, 116, 17);">
+        </form>
+      <% end %>
+    </ul> 
 
-    </div>
+    <h2>Completed Tasks</h2>
+    <ul>
+      <% @completed_tasks.each do |task|%>
+        <li>
+          <h3><%= task['title'] %></h3>
+          <h4><%= task['description'] %></h4>
+          <h6><%= task['category'] %></h6>
+        </li> 
+        <form action="/tasks/<%=task["id"]%>/delete" method="post">
+          <input type="submit" value="Unassign Task" style="color: red;">
+        </form>
+        <form action="/tasks/<%=task["id"]%>/edit" method="get">
+          <input type="submit" value="Edit Task" style="color: rgb(235, 200, 2);">
+        </form>
+        <form action="/tasks/<%=task["id"]%>/uncomplete" method="post">
+          <input type="submit" value="Uncomplete Task" style="color: rgb(10, 0, 116)">
+        </form>
+      <% end %>
+    </ul> 
 
-    <div id="addTask_wrapper">
-      <h1>Add Task</h1>
-    </div>
 
-    <div id="comTasks_wrapper">
-      <h2>Completed</h2>
-    </div>
+    <h3>Assign Task</h3>
+    <blockquote>
+      <form action="/tasks" method="post">
+         <label>Title <input type="text" name="task_title"></label>
+         <label>Description <input type="text" name="task_description"></label>
+         <input type="submit" value="Assign New Task">
+      </form>
+    </blockquote>
 
   </div>
   </body>
