--- a/views/index.erb
+++ b/views/index.erb
@@ -54,6 +54,10 @@
       <form action="/tasks" method="post">
          <label>Title <input type="text" name="task_title"></label>
          <label>Description <input type="text" name="task_description"></label>
+         <label>Category <select name="task_category">
+          <option value="private">Private</option>
+          <option value="shopping">Shopping</option>
+          </select></label>
          <input type="submit" value="Assign New Task">
       </form>
     </blockquote>
