--- a/views/index.erb
+++ b/views/index.erb
@@ -62,6 +62,20 @@
       </form>
     </blockquote>
 
+
+<h3>Login</h3>
+    <form action="/login" method="POST">
+      <label>Username:
+        <input type="text" value="Admin" name="username" id="username" required></label>
+    
+      <label for="password">Password:
+        <input type="password" value="123" name="password" id="password" required></label>
+    
+      <button type="submit">Login</button>
+    </form>
+    <a href="/logout">Logga ut</a>
+
+  <a href="/admin">Super Secret Admin</a>
   </div>
   </body>
 </html>
